--- a/css/dz_flex.css
+++ b/css/dz_flex.css
@@ -22,9 +22,18 @@ header, nav, aside, main, section, footer {
 }
 
 header {
-background: linear-gradient(to bottom, rgba(180, 227, 145, 1) 0%, rgba(97, 196, 25, 1) 50%, rgba(180, 227, 145, 1) 100%);
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(to bottom, rgba(180, 227, 145, 1) 0%, rgba(97, 196, 25, 1) 50%, rgba(180, 227, 145, 1) 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ *;*/
-   min-height: 100px;
+    min-height: 100px;
+}
+a {
+    color: black;
+    font-size: 20px;
+}
+a:hover {
+    font-weight: bold;
 }
 
 nav {
