--- a/css/dz_grid.css
+++ b/css/dz_grid.css
@@ -20,6 +20,9 @@ body {
     }
        
 .box-1 {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
     grid-column: 1/13;
     /* grid-row: ; */
     background: linear-gradient(to bottom, rgba(180, 227, 145, 1) 0%, rgba(97, 196, 25, 1) 50%, rgba(180, 227, 145, 1) 100%);
@@ -60,4 +63,12 @@ body {
     /* background: #08A16E; */
     background: linear-gradient(to bottom, rgba(180, 221, 180, 1) 0%, rgba(131, 199, 131, 1) 17%, rgba(82, 177, 82, 1) 33%, rgba(0, 138, 0, 1) 67%, rgba(0, 87, 0, 1) 83%, rgba(0, 36, 0, 1) 100%);
         /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
+
+a {
+    color: black;
+    font-size: 20px;
+}
+a:hover {
+     font-weight: bold;
 }
